--- a/src/app/view/main/Carousel.module.css
+++ b/src/app/view/main/Carousel.module.css
@@ -1,197 +1,431 @@
 .carouselWrapper {
-    /* display: flex;
+  /* display: flex;
     flex-direction: column;
     align-items: center;
     position: relative; */
-    margin: 50px 30px;
-    text-align: center;
+  margin: 50px 30px;
+  text-align: center;
+
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: auto;
+}
+
+.imageSlider {
+  /* border-radius: 50px; */
+
+}
+
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .imageSlider {
+    width: 100%;
+    height: 250px;
+    border-radius: 20px;
 
   }
-  
-  .swiper-slide img {
-    width: 100%; 
-    height: auto; 
-  }
-  .imageSlider{
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+  .imageSlider {
+
+    width: 100%;
+
     border-radius: 50px;
-  }
-  .buttonTags{
 
-    border: 1px solid grey;
-    color: black;
-    font-size: 20px;
-    padding: 10px 20px;
-    margin-top: 20px;
-    border-radius: 20px;
-    
- 
   }
-  
-  .buttonTitle{
-
-   
-    color: black;
-    font-size: 50px;
-    padding: 10px 20px;
-    margin-top: 20px;
-    border-radius: 10px;
-    
- 
-  }
-  
-  /* Navigation buttons below the image */
-  .navButtons {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px; /* Space between image and buttons */
-  }
-  
-  .prevButton,
-  .nextButton {
-    background-color: #000;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    margin: 0 10px;
-    cursor: pointer;
-  }
-  
-  .prevButton:hover,
-  .nextButton:hover {
-    background-color: #555;
-  }
+}
 
 
 
-
-  /* LAYOUT 2 */
-
-  .Layout2{
-    display: flex;
-    margin: 0px 3em;
-    justify-content: space-between;
-    align-items: center;
-    
-  }
-  .Layout2Box{
-    margin: 0px 3em;
-  }
-  .imageLayout2{
-    border-radius: 20px;
-  }
-  .viewallbutton{
-    background-color: #000;
-    padding: 15px 20px;
-    border-radius: 30px;
-    text-transform: uppercase;
-    font-family: ABC Monument Grotesk, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
-   font-size: 13px;
-   font-weight: 500;
-  }
-  .viewallbutton:hover{
- background-color: #fff;
- border: 1px solid black;
- color: #000;
-  }
-  .Layout2text{
-    /* font-size: 5em; */
-    color: #000 !important;
-
-    font-family: Rhymes Display;
-   
-    font-weight: 200;
-    letter-spacing: -.04em;
-  }
-
-  @media (min-width: 240px) {
-    .Layout2text {
-      font-size: 28px; 
-      color: green; /* Font size for small screens (640px and up) */
-    }
-  }
+.buttonTags {
+  /* margin-top: 18px; */
+  border: 1px solid rgb(224, 223, 223);
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size: 14px;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 30px;
+  margin-bottom: 20px;
 
 
-  @media (min-width: 640px) {
-    .Layout2text {
-      font-size: 28px; 
-      color: red; /* Font size for small screens (640px and up) */
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .Layout2text {
-      font-size: 42px; 
-      color: pink;
-      /* Font size for medium screens (768px and up) */
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .Layout2text {
-      font-size: 66px;
-      /* color: blue; */
-      
-    }
-  }
 
-  .Layout2Boxbutton{
-    margin-top: 18px;
-    border: 1px solid rgb(224, 223, 223);
-    border-radius: 20px;
-    padding: 5px 15px;
-    font-size: 13px;
-    color: #000;
-    text-transform: uppercase;
+}
 
-    
-  }
-  .Layout2imageText{
-    color:#000 !important ;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-    font-weight: 500;
+.buttonTitle {
+
+
+  color: black;
+  font-size: 50px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+
+
+}
+
+/* .detailsTitle{
+  color: #000 !important;
+  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  font-weight: 500;
   margin-top: 10px;
   margin-left: 4px;
-    
-  }
-  @media (min-width: 240px) {
-    .Layout2imageText {
-      font-size: 28px; 
-      color: green; /* Font size for small screens (640px and up) */
-    }
-  }
+  font-size: 4rem;
+  
+  width: 50%;
+  line-height: 1;
+  margin-bottom: 10px;
+
+ 
+} */
 
 
-  @media (min-width: 640px) {
-    .Layout2imageText {
-      font-size: 28px; 
-      color: red; /* Font size for small screens (640px and up) */
-    }
+
+.detailsTitle {
+  color: #000 !important;
+  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  font-weight: 500;
+  margin-top: 10px;
+  width: 53%;
+  line-height: 1;
+  margin-bottom: 10px;
+
+
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .detailsTitle {
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 500;
+    margin-top: 10px;
+    width: 100%;
+    line-height: 1;
+    margin-bottom: 10px;
+    font-size: 30px;
+
+
   }
-  
-  @media (min-width: 768px) {
-    .Layout2imageText {
-      font-size: 22px; 
-      color: pink;
-      /* Font size for medium screens (768px and up) */
-    }
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+  .detailsTitle {
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 500;
+    margin-top: 10px;
+    width: 50%;
+    line-height: 1;
+    margin-bottom: 10px;
+    font-size: 50px;
+
+
   }
-  
-  @media (min-width: 1024px) {
-    .Layout2imageText {
-      font-size: 30px;
-      color: blue;
-      
-    }
+}
+
+.commonimage {
+  width: 100%;
+  height: 170px;
+  border-radius: 20px;
+}
+
+.layout4box {
+  margin-top: 6px;
+}
+.layout4{
+  margin:0px 3em
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .commonimage {
+    width: 90%;
+    height: 130px;
+    border-radius: 10px;
   }
+
+  .flexcommpon {
+    display: flex;
+    overflow-x: hidden;
+    width: 100%;
+  }
+
+  .Layout3Boxbutton {
+    /* margin-top: 18px; */
+    border: 1px solid rgb(224, 223, 223);
+    border-radius: 20px;
+    padding: 5px 10px;
+    font-size: 10px;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-align: left !important;
+
+
+
+  }
+
+  .layout4box {
+    margin-top: 0px;
+  }
+  .layout4{
+    margin:0px 1.3em
+  }
+}
+
+.flexcommpon {}
+
+
+
+/* Navigation buttons below the image */
+.navButtons {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  /* Space between image and buttons */
+}
+
+.prevButton,
+.nextButton {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  padding: 13px 13px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+.prevButton:hover,
+.nextButton:hover {
+  background-color: #555;
+}
+
+
+
+
+/* LAYOUT 2 */
+
+.Layout2 {
+  display: flex;
+  margin: 0px 2em;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.Layout2Box {
+  margin: 0px 2em;
+}
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .Layout2Box {
+    margin: 0px 0.9em;
+  }
+}
+
+
+
+.imageLayout2 {
+  border-radius: 20px;
+}
+
+.viewallbutton {
+  background-color: #000;
+  padding: 15px 20px;
+  border-radius: 30px;
+  text-transform: uppercase;
+  font-family: ABC Monument Grotesk, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.viewallbutton:hover {
+  background-color: #fff;
+  border: 1px solid black;
+  color: #000;
+}
+
+.Layout2text {
+  /* font-size: 5em; */
+  color: #000 !important;
+
+  font-family: Rhymes Display;
+
+  font-weight: 200;
+  letter-spacing: -.04em;
+}
+.layout2con{
+  /* margin: 0px 10px; */
+  padding: 0px 10px;
+}
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .Layout2 {
+   
+    margin: 0px 1em;
+   
   
+  }
+  .layout2con{
+    padding: 0px 10px;
+  }
+}
+
+@media (min-width: 240px) {
+  .Layout2text {
+    font-size: 28px;
+    color: green;
+    /* Font size for small screens (640px and up) */
+  }
+}
+
+
+@media (min-width: 640px) {
+  .Layout2text {
+    font-size: 28px;
+    color: red;
+    /* Font size for small screens (640px and up) */
+  }
+}
+
+@media (min-width: 768px) {
+  .Layout2text {
+    font-size: 42px;
+    color: pink;
+    /* Font size for medium screens (768px and up) */
+  }
+}
+
+@media (min-width: 1024px) {
+  .Layout2text {
+    font-size: 66px;
+    /* color: blue; */
+
+  }
+}
+
+.Layout2Boxbutton {
+  margin-top: 18px;
+  border: 1px solid rgb(224, 223, 223);
+  border-radius: 20px;
+  padding: 5px 15px;
+  font-size: 13px;
+  color: #000;
+  text-transform: uppercase;
+
+
+}
+
+.Layout2imageText {
+  color: #000 !important;
+  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-left: 4px;
+
+}
+
+@media (min-width: 240px) {
+  .Layout2imageText {
+    font-size: 28px;
+    color: green;
+    /* Font size for small screens (640px and up) */
+  }
+}
+
+
+@media (min-width: 640px) {
+  .Layout2imageText {
+    font-size: 28px;
+    color: red;
+    /* Font size for small screens (640px and up) */
+  }
+}
+
+@media (min-width: 768px) {
+  .Layout2imageText {
+    font-size: 22px;
+    color: pink;
+    /* Font size for medium screens (768px and up) */
+  }
+}
+
+@media (min-width: 1024px) {
+  .Layout2imageText {
+    font-size: 30px;
+    color: blue;
+
+  }
+}
+
 
 
 /* LAyout -3 */
 
-  .imagecotainer{
-    width: 25%;
-    margin-right: 20px;
-    border-radius: 70%
-  
+.imagecotainer {
+  width: 25%;
+  margin-right: 20px;
+  border-radius: 70%
+}
+
+
+.Layout3Boxbutton {
+  /* margin-top: 18px; */
+  border: 1px solid rgb(224, 223, 223);
+  border-radius: 20px;
+  padding: 5px 10px;
+  font-size: 10px;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 500;
+
+
+
+}
+
+
+
+.Layout3imageText {
+  color: #000 !important;
+  font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-left: 4px;
+  line-height: normal;
+
+}
+
+@media (min-width: 240px) {
+  .Layout3imageText {
+    font-size: 18px;
+    color: green;
+    /* Font size for small screens (640px and up) */
   }
-  
+}
+
+
+@media (min-width: 640px) {
+  .Layout3imageText {
+    font-size: 28px;
+    color: red;
+    /* Font size for small screens (640px and up) */
+  }
+}
+
+@media (min-width: 768px) {
+  .Layout3imageText {
+    font-size: 22px;
+    color: pink;
+    /* Font size for medium screens (768px and up) */
+  }
+}
+
+@media (min-width: 1024px) {
+  .Layout3imageText {
+    font-size: 30px;
+    color: blue;
+
+  }
+}
