--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -94,3 +94,24 @@
   .smaller-brand {
     max-width: 150px; /* Adjust the size as needed */
 }
+
+.shrink {
+  width: 200px; /* Shrinks to 10px on scroll */
+}
+
+.brandImage {
+  width: 300px; /* You can adjust the width as needed */
+  height: auto;
+
+
+
+}
+
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .brandImage {
+    width: 200px; /* You can adjust the width as needed */
+    height: auto;
+  
+  } 
+}
