--- a/src/app/view/Allabout/about.module.css
+++ b/src/app/view/Allabout/about.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
+
 /* .buttonDetailsText{
     border: 1px solid rgb(224, 223, 223);
     border-radius: 20px;
@@ -193,10 +194,10 @@ font-size: 20px;
 
 .detailsTitle{
     color: #000 !important;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-    font-weight: 500;
+    font-family: "Crimson Text", serif;
+    font-weight: 200;
     margin-top: 10px;
-    width: 53%; 
+    /* width: 93%;  */
     line-height: 1;
     margin-bottom: 10px;
 
@@ -206,8 +207,8 @@ font-size: 20px;
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .detailsTitle{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 500;
+        font-family: "Crimson Text", serif;
+        font-weight: 400;
         margin-top: 10px;
         width: 100%; 
         line-height: 1;
@@ -220,12 +221,15 @@ font-size: 20px;
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .detailsTitle{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 500;
+        font-family: "Crimson Text", serif;
+  font-weight: 200;
+  font-style: normal;
+      letter-spacing: -4.2px;
         margin-top: 10px;
-        width: 50%; 
+        width: 60%; 
         line-height: 1;
         margin-bottom: 10px;
+        font-size: 70px;
     
        
     }
@@ -283,20 +287,24 @@ font-size: 20px;
     margin-top: 30px;
     width: 100%;  */
 
+
     color: #2f2e2e !important;
     font-family: "Crimson Text", serif;
-  font-weight: 200;
+  font-weight: 500;
   font-style: normal;
     margin-top: 30px;
     /* width: 100%;  */
-   font-size: 21px;
+   font-size: 25px;
+   margin-bottom: 80px;
+   
+  
    
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .descriptionTitle{
-        color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
         font-weight: 100;
         margin-top: 30px;
         /* width: 100%;  */
@@ -306,12 +314,14 @@ font-size: 20px;
 
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .descriptionTitle{
-        color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 100;
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
+        /* font-weight: 100; */
         margin-top: 30px;
         /* width: 100%;  */
-        width: 50%;
+        width: 45%;
+        letter-spacing: -1px;
+        line-height: 1.3em;
     }
 }
 
@@ -369,3 +379,38 @@ font-size: 20px;
     background-color: #000;
     color: white;
 }
+
+
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+    .bottomCurve{
+        margin-left: 22em;
+        margin-right: 22em;
+        margin-bottom: 5em;
+    }
+    .textBottom{
+        font-size: 20px;
+        font-family: "Crimson Text", serif;
+        font-weight: 500;
+    }
+    .allaboutFlex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .textBottom{
+        font-size: 20px;
+        font-family: "Crimson Text", serif;
+        font-weight: 500;
+    }
+    .bottomCurve{
+       
+        margin-bottom: 5em;
+    }
+}
+
+
