--- a/src/app/view/fashionDetails/fashion.module.css
+++ b/src/app/view/fashionDetails/fashion.module.css
@@ -1,4 +1,5 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
 
 
@@ -126,18 +127,26 @@
 }
 
 .descriptionTitle{
-    color: #000 !important;
+    /* color: #000 !important;
     font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
     font-weight: 100;
+    margin-top: 30px; */
+    /* width: 100%;  */
+
+    color: #2f2e2e !important;
+    font-family: "Crimson Text", serif;
+  font-weight: 200;
+  font-style: normal;
     margin-top: 30px;
     /* width: 100%;  */
+   font-size: 21px;
    
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .descriptionTitle{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
         font-weight: 100;
         margin-top: 30px;
         /* width: 100%;  */
@@ -148,7 +157,7 @@
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .descriptionTitle{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
         font-weight: 100;
         margin-top: 30px;
         /* width: 100%;  */
