--- a/src/app/view/privacypolicy/privacy.module.css
+++ b/src/app/view/privacypolicy/privacy.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
+
 /* .buttonDetailsText{
     border: 1px solid rgb(224, 223, 223);
     border-radius: 20px;
@@ -220,12 +221,15 @@ font-size: 20px;
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .detailsTitle{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 500;
+        font-family: "Crimson Text", serif;
+  font-weight: 400;
+  font-style: normal;
+      letter-spacing: -4.2px;
         margin-top: 10px;
         width: 50%; 
         line-height: 1;
         margin-bottom: 10px;
+        font-size: 70px;
     
        
     }
@@ -283,20 +287,23 @@ font-size: 20px;
     margin-top: 30px;
     width: 100%;  */
 
+
     color: #2f2e2e !important;
     font-family: "Crimson Text", serif;
-  font-weight: 200;
+  font-weight: 500;
   font-style: normal;
     margin-top: 30px;
     /* width: 100%;  */
-   font-size: 21px;
+   font-size: 20px;
+   margin-bottom: 80px;
+  
    
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
     .descriptionTitle{
-        color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
         font-weight: 100;
         margin-top: 30px;
         /* width: 100%;  */
@@ -306,12 +313,13 @@ font-size: 20px;
 
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
     .descriptionTitle{
-        color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 100;
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
+        /* font-weight: 100; */
         margin-top: 30px;
         /* width: 100%;  */
-        width: 50%;
+        width: 45%;
+        letter-spacing: -1px;
     }
 }
 
